- fix top card hash wrapping

--- a/src/components/TopCard/topCard.styles.scss
+++ b/src/components/TopCard/topCard.styles.scss
@@ -6,26 +6,8 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: flex-start;
+  background-color: var(--neutral-900);
   border-radius: var(--card-border-radius);
-  background: linear-gradient(150deg, #1f1f1f 8%, var(--neutral-900) 92%);
-  &:before {
-    content: '';
-    position: absolute;
-    inset: 0;
-    border-radius: var(--card-border-radius);
-    padding: 2px;
-    mask:
-      linear-gradient(#fff 0 0) content-box,
-      linear-gradient(#fff 0 0);
-    -webkit-mask-composite: xor;
-    -webkit-mask:
-      linear-gradient(#fff 0 0) content-box,
-      linear-gradient(#fff 0 0);
-    -webkit-mask-composite: xor;
-    mask-composite: exclude;
-    pointer-events: none;
-    background: linear-gradient(0, transparent, rgba(255, 255, 255, 0.06) 100%);
-  }
 
   &-header,
   &-body {
@@ -44,6 +26,16 @@
       font-family: var(--headings-font-family);
       font-weight: 500;
       margin-bottom: 0;
+      .trim-wrapper {
+        display: -webkit-box;
+        -webkit-box-orient: vertical;
+        -webkit-line-clamp: 2;
+        overflow: hidden;
+        height: 2.5em;
+        &.hash {
+          max-width: 10rem;
+        }
+      }
     }
     &-icon {
       width: 1.5rem;
